fixed image flickering

--- a/src/components/home/Home.scss
+++ b/src/components/home/Home.scss
@@ -634,7 +634,7 @@ body {
   bottom: 1%;
   left: 50%;
   display: inline;
-  width: 12vw;
+  width: 10vw;
   height: auto;
   min-height: 85px;
   min-width: 85px;
